--- a/app/src/main/res/layout/fragment_find_pet.xml
+++ b/app/src/main/res/layout/fragment_find_pet.xml
@@ -58,6 +58,7 @@
             android:layout_height="30dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/style_btn"
+            android:onClick="dogBtn"
             android:text="@string/dog_zone"
             android:textColor="@color/khaki"
             android:textSize="14sp"
@@ -71,6 +72,7 @@
             android:layout_height="30dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/style_btn"
+            android:onClick="catBtn"
             android:text="@string/cat_zone"
             android:textColor="@color/khaki"
             android:textSize="14sp"
@@ -83,6 +85,7 @@
             android:layout_height="30dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/style_btn"
+            android:onClick="otherBtn"
             android:text="@string/other_zone"
             android:textColor="@color/khaki"
             android:textSize="12sp"
