--- a/app/src/main/res/layout/item_pet.xml
+++ b/app/src/main/res/layout/item_pet.xml
@@ -10,8 +10,11 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginBottom="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_dog" />
