--- a/app/src/main/res/layout/item_pet.xml
+++ b/app/src/main/res/layout/item_pet.xml
@@ -9,15 +9,15 @@
         android:id="@+id/img"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="2dp"
         android:layout_marginEnd="4dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_dog" />
+        app:srcCompat="@drawable/ic_no_photo" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline3"
@@ -62,6 +62,7 @@
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="2dp"
         android:text="TextView"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
